# notesLinearAlg

./: .gitattributes  Manifest.toml  Project.toml  README.md  _publish.yml  _quarto.yml  ch_10.qmd  ch_11.qmd  ch_12.qmd  ch_13.qmd  ch_14.qmd  ch_15.qmd  ch_2.qmd  ch_3.qmd  ch_4.qmd  ch_5.qmd  ch_6.qmd  ch_7.qmd  ch_8.qmd  ch_9.qmd  index.qmd  pyproject.toml
.github/workflows/: publish-workflow.yml
.quarto/_freeze/ch_2/execute-results/: html.json
.quarto/cites/: index.json
.quarto/idx/: ch_2.qmd.json  ch_3.qmd.json  ch_4.qmd.json  index.qmd.json
.quarto/xref/: 28575de6  936f09a1  INDEX  ee2dfe72
_book/: ch_10.html  ch_11.html  ch_12.html  ch_13.html  ch_14.html  ch_15.html  ch_2.html  ch_3.html  ch_4.html  ch_5.html  ch_6.html  ch_7.html  ch_8.html  ch_9.html  index.html  search.json
_book/site_libs/bootstrap/: bootstrap.min.css
_freeze/ch_10/execute-results/: html.json
_freeze/ch_11/execute-results/: html.json
_freeze/ch_13/execute-results/: html.json
_freeze/ch_14/execute-results/: html.json
_freeze/ch_15/execute-results/: html.json
_freeze/ch_2/execute-results/: html.json
_freeze/ch_3/execute-results/: html.json
_freeze/ch_4/execute-results/: html.json
_freeze/ch_5/execute-results/: html.json
_freeze/ch_6/execute-results/: html.json
_freeze/ch_7/execute-results/: html.json
_freeze/ch_8/execute-results/: html.json
_freeze/ch_9/execute-results/: html.json
src/: linear_algebra.jl
