[tool.poetry]
name = "linear-algebra"
version = "0.1.0"
description = ""
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
jupyter-cache = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
